Add a couple of tweaks from discussion in today's meeting.

--- a/syllabus.html
+++ b/syllabus.html
@@ -21,7 +21,7 @@
       practice required to design and apply algorithms to solve personal, spiritual,
       and personal challenges you have in your life, and help others apply the same
       to their lives. This course builds your ability to see yourself as a logical,
-      mathematical thinker, with power and ability to make good, defensible decisions
+      algorithmic thinker, with power and ability to make good, defensible decisions
       and communicate your thinking to others, along with why the decisions you have
       made are good.
   </p>
@@ -102,8 +102,8 @@
 		  <ul>
           <li>Week 1
 <p>
-You will introduce yourself to the class and ponder how you can change your
-attitude towards mathematics.
+You will introduce yourself to the class and ponder how you see yourself as a
+logical thinker.
 </p></li>
          <li>Week 2 through Week 6
 <p>
