Incorporate suggestions from last Friday's meeting.

--- a/syllabus.html
+++ b/syllabus.html
@@ -37,17 +37,26 @@
 			<li>showing empathy and love; and</li>
 			<li>being humble enough to ask for help from your teacher and others in the class.</li>
 		</ul>
-		<p>All tasks assigned to you in this course are to be completed in teams. Your
+		<p>
+        Most tasks assigned to you in this course are to be completed in teams. Your
         instructor will inform you regarding team creation. It is also true that you
-        will never be given a team grade. All of us here on earth work together to
-        aid each other in achieving salvation and exaltation, yet we are individually
-        responsible for our own salvation and exaltation.
-        Nobody makes it to the Celestial Kingdom because they belonged to a group of
-        good people. Neither should you expect to get an A just because you are part of
-        a group of hardworking students that come to understand the topics of this
-        course and are able to apply them.
+        will never be given a team grade. You will be accountable to your team, and will
+        report during class meeetings the results of your investigations and collaborations
+        outside of class. Outside collaborations are not class-directed, nor are
+        they graded.
     </p>
-		<p>Therefore, when you are helping someone you should never give them your own work.
+    <p>
+        Teamwork is part of the BYU-Idaho Learning Model, and indeed, it is part
+        of the Plan of Salvation. All of us here on earth work together to aid
+        each other in achieving salvation and exaltation, yet we are
+        individually responsible for our own salvation and exaltation. Nobody
+        makes it to the Celestial Kingdom because they belonged to a group of
+        good people. Neither should you expect to get an A just because you are
+        part of a group of hardworking students that come to understand the
+        topics of this course and are able to apply them.
+    </p>
+		<p>
+        Therefore, when you are helping someone you should never give them your own work.
         Neither should you expect someone to give you theirs when you ask them for help.
 			  Instead, help those who will come to you by talking over how they are
 			  thinking about and approaching their tasks, showing them how to search for
