--- a/week01-course-introduction.html
+++ b/week01-course-introduction.html
@@ -128,7 +128,7 @@ It&rsquo;s interesting that Elder Perry ties the gospel recipe back to the cooki
 </p>
 
 <p>
-Back to thinking in the large and in the small, here&rsquo;s Moroni&rsquo;s recipe for
+Back to thinking in the large and in the small, here&rsquo;s Moroni&rsquo;s algorithm for
 a successful life &#x2014; becoming &ldquo;perfect in Christ&rdquo;:
 </p>
 
@@ -141,7 +141,7 @@ that by his grace ye may be perfect in Christ &hellip; (Moroni 10:32, emphasis a
 </p>
 </blockquote>
 <p>
-Perhaps Moroni would smile if we took liberties and interpreted his recipe thus:
+Perhaps Moroni would smile if we took liberties and interpreted his algorithm thus:
 </p>
 
 <p>
@@ -157,6 +157,11 @@ Until perfected in Christ:
 <li>Falter and stumble (sin)</li>
 <li>Repent and go to step 1.</li>
 </ol>
+
+<div class="figure">
+    <p><img src="https://rickneff.github.io/images/fig-moronis-algorithm.png" alt="Moroni&rsquo;s Algorithm" title="Moroni&rsquo;s Algorithm for becoming Perfect in Christ" />
+    </p>
+</div>
 
 <p>
 (This actually follows an algorithm design technique named <i>Iterative
