Incorporate more suggestions.

--- a/syllabus.html
+++ b/syllabus.html
@@ -38,12 +38,13 @@
 			<li>being humble enough to ask for help from your teacher and others in the class.</li>
 		</ul>
 		<p>
-        Most tasks assigned to you in this course are to be completed in teams. Your
-        instructor will inform you regarding team creation. It is also true that you
-        will never be given a team grade. You will be accountable to your team, and will
-        report during class meeetings the results of your investigations and collaborations
-        outside of class. Outside collaborations are not class-directed, nor are
-        they graded.
+        Many tasks assigned to you in this course are to be completed in teams.
+        Your instructor will inform you regarding team creation. It is also true
+        that you will never be given a team grade. You will be accountable to
+        your team, and will report to them during class meeetings (but never
+        outside of class) the results of your investigations and collaborations
+        outside of class. But no tasks done outside of class will be
+        instructor- or peer-reviewed.
     </p>
     <p>
         Teamwork is part of the BYU-Idaho Learning Model, and indeed, it is part
@@ -138,8 +139,10 @@ spiritual, and personal lives, and suggest improved alternatives.
 </p></li>
        <li>Week 14
 <p>
-You will ponder your experience in the class and write a self-assessment
-report, including the final grade you will claim for the course.
+You will ponder your experience in the class and write a self-assessment report,
+including the final grade you will claim for the course, taking into account
+your peers&rsquo; evaluations of your work measured in percentage/letter-grade
+terms per the following section.
 </p></li>
 		</ul>
 	</p>
@@ -190,7 +193,7 @@ report, including the final grade you will claim for the course.
 
   <h3>From the University Catalog</h3>
       <p>
-          As you assess your learning for your grade calculation, apply these
+          As you assess your learning for your final grade claim, apply these
           definitions from the catalog.
       </p>
       <ul>
@@ -225,7 +228,7 @@ report, including the final grade you will claim for the course.
   <h3>Help and Other Resources</h3>
   <p>
       If any technical difficulties with your computer arise during the course,
-      contact the Help Desk before contacting me.
+      contact the Help Desk before contacting your instructor.
   </p>
   <h3>Help Desk Contact Information</h3>
   <ul>
