--- a/syllabus.html
+++ b/syllabus.html
@@ -79,17 +79,11 @@
 	<p>
       When you successfully complete this course, you will be able to:
 		<ol>
-        <li>solve life-challenges where algorithmic thinking skills are needed to
-            design and create an algorithm that can then be used to inform
-            decisions or draw conclusions,</li>
-        <li>use algorithmic thinking to assess what key variables are needed and
-            to illuminate key assumptions made when creating and applying an
-            algorithm to life-challenges,</li>
-        <li>use self-designed algorithms to make informed decisions,</li>
-        <li>interpret quantitative data regarding the quality of self-designed
-            algorithms, and</li>
-        <li>communicate self-designed algorithms to others in an efficient,
-            mathematical, way.</li>
+        <li>Create algorithms to achieve specific goals</li>
+        <li>Recognize existing algorithms in everyday life</li>
+        <li>Identify the characteristics of algorithms</li>
+        <li>Decompose algorithms into discrete steps</li>
+        <li>Improve algorithms</li>
 		</ol>
 	</p>
 	<h3>Course Structure</h3>
@@ -105,7 +99,7 @@
       the efficiency of the algorithms you found in week 7 to help others improve
       their lives. In week 14 you will report on the growth you have achieved over
       the semester due to your increased understanding of algorithms.
-  </p>
+    </p>
 
 	<h3>Assessments</h3>
 	<p>
