Updated links to be more standardized

--- a/syllabus.html
+++ b/syllabus.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div class="hero-image">
+<div class="hero-image" style="max-height: 200px;">
   <div class="hero-text">
     <h1>Algorithmic Thinking</h1>
     <p>CSE 180</p>
